edition = "2023";

package yuhaiin.statistic;
import "google/protobuf/go_features.proto";
import "config/bypass.proto";

option go_package = "github.com/Asutorufa/yuhaiin/pkg/protos/statistic";
option features.(pb.go).api_level = API_OPAQUE;

/*
        "tcp", "tcp4", "tcp6"
        "udp", "udp4", "udp6"
        "ip", "ip4", "ip6"
        "unix", "unixgram", "unixpacket"
*/
enum type {
  unknown = 0;
  tcp = 1;
  tcp4 = 2;
  tcp6 = 3;
  udp = 4;
  udp4 = 5;
  udp6 = 6;
  ip = 7;
  ip4 = 8;
  ip6 = 9;
  unix = 10;
  unixgram = 11;
  unixpacket = 12;
}

message net_type {
  type conn_type = 1 [ json_name = "conn_type" ];
  type underlying_type = 2 [ json_name = "underlying_type" ];
}

message connection {
  reserved 4, 23;
  reserved extra, mode_reason;
  string addr = 1 [ json_name = "addr" ];
  uint64 id = 2 [ json_name = "id" ];
  net_type type = 3 [ json_name = "type" ];
  string source = 5 [ json_name = "source" ];
  string inbound = 6 [ json_name = "inbound" ];
  string inbound_name = 27 [ json_name = "inbound_name" ];
  string interface = 29 [ json_name = "interface" ];
  string outbound = 24 [ json_name = "outbound" ];
  string local_addr = 26 [ json_name = "LocalAddr" ];
  string destionation = 7 [ json_name = "destionation" ];
  string fake_ip = 8 [ json_name = "fake_ip" ];
  string hosts = 9 [ json_name = "hosts" ];
  string domain = 10 [ json_name = "domain" ];
  string ip = 11 [ json_name = "ip" ];
  string tag = 12 [ json_name = "tag" ];
  string hash = 13 [ json_name = "hash" ];
  string node_name = 25 [ json_name = "node_name" ];
  string protocol = 14 [ json_name = "protocol" ];
  string process = 15 [ json_name = "process" ];
  uint64 pid = 16 [ json_name = "pid" ];
  uint64 uid = 17 [ json_name = "uid" ];
  string tls_server_name = 18 [ json_name = "tls_server_name" ];
  string http_host = 19 [ json_name = "http_host" ];
  string component = 20 [ json_name = "component" ];
  uint64 udp_migrate_id = 21 [ json_name = "udp_migrate_id" ];
  yuhaiin.bypass.mode mode = 22 [ json_name = "mode" ];
  repeated match_history_entry match_history = 28
      [ json_name = "match_history" ];
  string resolver = 30 [ json_name = "resolver" ];
  string geo = 31 [ json_name = "geo" ];
  string outbound_geo = 32 [ json_name = "outbound_geo" ];
}

message match_result {
  string list_name = 1 [ json_name = "list_name" ];
  bool matched = 2 [ json_name = "matched" ];
}

message match_history_entry {
  string rule_name = 1 [ json_name = "rule_name" ];
  repeated match_result history = 2 [ json_name = "history" ];
}
